# python-testing-basics

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: testing.yml
src/thething/: main.py  module.py
src/thething/nested/: module_nested.py
tests/: test_module.py  test_nested.py
