[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thething"
version = "0.1.0"
description = "A short description of your project"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"

requires-python = ">=3.11"


dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src/thething"]

